--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </button>
         </div>
     </form>
-    <form id="edit-form" class="">
+    <form id="edit-form">
         <p>Edite a sua tarefa</p>
         <div class="form-control">
             <input type="text" id="edit-input">
