--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
     <form id="todo-form">
         <p>Adicione a sua tarefa</p>
         <div class="form-control">
-            <input type="text" id="todo-input" placeholder="O que você vai fazer">
+            <input 
+            type="text"
+             id="todo-input" 
+             placeholder="O que você vai fazer?"/>
             <button type="submit">
                 <i class="fa-thin fa-plus"></i>
             </button>
         </div>
     </form>
-    <form id="edit-form">
+    <form id="edit-form" class="hide">
         <p>Edite a sua tarefa</p>
         <div class="form-control">
             <input type="text" id="edit-input">
@@ -52,7 +55,7 @@
         </div>
     </div>
     <div id="todo-list">
-        <div class="todo">
+        <!-- <div class="todo">
             <h3>Estou fazendo...</h3>
             <button class="finish-todo">
                 <i class="fa-solid fa-check"></i>
@@ -63,8 +66,8 @@
             <button class="remove-todo">
                 <i class="fa-solid fa-xmark"></i>
             </button>
-        </div>
-        <div class="todo done">
+        </div> -->
+        <!-- <div class="todo done">
             <h3>Estudar java script</h3>
             <button class="finish-todo">
                 <i class="fa-solid fa-check"></i>
@@ -75,7 +78,7 @@
             <button class="remove-todo">
                 <i class="fa-solid fa-xmark"></i>
             </button>
-        </div>
+        </div> -->
     </div>
    </div>
 </body>
